<resources>
    <string name="app_name">Cryptix</string>
    <string name="typeInputSearch">Search Input Type</string>
    <string name="unitInputSearch">Search Input Unit</string>
    <string name="sendInverse">Swap In/Out</string>
    <string name="sendGo">Go</string>
    <string name="unitOutputSearch">Search Output Unit</string>
    <string name="typeInputListText">Type List</string>
    <string name="unitInputListText">Unit List</string>
    <string name="unitOutputListText">Unit List</string>
    <string name="sendConvert">Convert</string>
    <string name="sendCopy">Copy output</string>
    <string name="inputText">Input text</string>
    <string name="outputText">Output text</string>

    <string name="title_share">Share</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_decimals_title">Decimal points</string>

    <string name="display_header">Display</string>
    <string name="func_header">Functionality</string>
</resources>
